--- a/source/_fixed_navbar.erb
+++ b/source/_fixed_navbar.erb
@@ -1,16 +1,14 @@
-<nav class="fixed-navbar">
-  <div class="container-navbar">
-    <%= image_tag("logo_ho2.png", class: "logo-navbar-fixed") %>
-    <ul class="navbar-menu">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">page a</a></li>
-      <li><a href="#">page b</a></li>
-      <li><a href="#">page c</a></li>
-      <li><a href="#">page d</a></li>
-      <li><a class="btn-book" href="#">Book an appointment</a></li>
-    </ul>
-    <%# <span>
-      <i class="fa fa-bars"></i>
-    </span> %>
+<div class="nav-container">
+  <div class="nav-logo">
+    <%= image_tag("logo.png") %>
   </div>
-</nav>
+  <div class="nav-item">Home</div>
+  <div class="nav-item">About</div>
+  <div class="nav-item">Services</div>
+  <div class="nav-item">Blog</div>
+  <div class="nav-item">Contact</div>
+  <div class="nav-action">
+      Book Appointment
+  </div>
+
+</div>
