--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -1,15 +1,25 @@
-<nav class="scroll-navbar">
-  <div class="container">
-   <%= image_tag("le-wagon-logo.png", class: "logo-navbar") %>
-
-
-    <ul class="navbar-menu">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">page a</a></li>
-      <li><a href="#">page b</a></li>
-      <li><a href="#">page c</a></li>
-      <li><a href="#">page d</a></li>
-    </ul>
-
+<div class="nav-container">
+  <div class="nav-logo">
+    <%= image_tag("logo.png", class: "logo-navbar") %>
   </div>
-</nav>
+  <div class="nav-item">
+    <a href="">Home</a>
+  </div>
+    <div class="nav-item">
+    <a href="">Acount</a>
+  </div>
+    <div class="nav-item">
+    <a href="">Services</a>
+  </div>
+    <div class="nav-item">
+    <a href="">Blog</a>
+  </div>
+    <div class="nav-item">
+    <a href="">Contact</a>
+  </div>
+    <div class="btn-main-lrg">
+     <a href="" > Book Appointment </a>
+  </div>
+
+</div>
+
