--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,74 +1,46 @@
-<%= partial "navbar" %>
-<header class="main-header">
-  <%= partial "fixed_navbar" %>
-</header>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
-<section>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque excepturi aperiam eaque! Saepe aliquam unde, blanditiis, ipsum quisquam velit optio suscipit mollitia maxime id quam perferendis sit, minima! Maxime, maiores.
-  </p>
-</section>
+
+<%= partial "banner" %>
+
+<div class="simple-bar">
+      <p>
+        Purchase Veronica the best physio theme for WordPress today
+      </p>
+    <div class="btn-main-lrg">
+      <a href="#">Book Appointment</a>
+    </div>
+</div>
+<div class="card-container">
+
+  <div class="card-category">
+    <div class="text">
+      <h3><a href="">Sports Massage</a></h3>
+
+      <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....
+          Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....
+      </p>
+
+      <div class="card-link">
+        <a href="">Read more</a>
+      </div>
+     </div>
+         <div class="spc"></div>
+  </div>
+
+
+  <div class="card-category">
+    <%= image_tag("1.png", class: "card-img") %>
+    <h4><a href="">Sports Massage</a></h4>
+    <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+    <div class="card-link">
+      <a href="">Read more</a>
+    </div>
+  </div>
+  <div class="card-category">
+    <%= image_tag("2.png", class: "card-img") %>
+    <h4><a href="">Sports Massage</a></h4>
+    <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+    <div class="card-link">
+      <a href="">Read more</a>
+    </div>
+  </div>
+</div>
