--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -1,4 +1,21 @@
 // Import your components CSS files here.
 @import "alert";
 @import "scroll_navbar";
-@import "fixed_navbar"
+@import "fixed_navbar";
+@import "navbar";
+@import "button";
+@import "banner";
+@import "card";
+
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Signika',sans-serif;
+}
+
+p {
+  line-height: 30px;
+}
+
+body {
+  background-color: white;
+}
