--- a/source/_navbar.erb
+++ b/source/_navbar.erb
@@ -2,22 +2,22 @@
   <div class="nav-logo">
     <%= image_tag("logo.png", class: "logo-navbar") %>
   </div>
-  <div class="nav-item">
+  <div class="item-a">
     <a href="">Home</a>
   </div>
-    <div class="nav-item">
+    <div class="item-b">
     <a href="">Acount</a>
   </div>
-    <div class="nav-item">
+    <div class="item-c">
     <a href="">Services</a>
   </div>
-    <div class="nav-item">
+    <div class="item-d">
     <a href="">Blog</a>
   </div>
-    <div class="nav-item">
+    <div class="item-e">
     <a href="">Contact</a>
   </div>
-    <div class="btn-main-lrg">
+    <div class="nav-btn btn-main-lrg">
      <a href="" > Book Appointment </a>
   </div>
 
