--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -44,3 +44,73 @@
     </div>
   </div>
 </div>
+
+<div class="container-header">
+  <p>
+    Why Veronica?
+  </p>
+</div>
+
+<div class="card-container-blu">
+  <div class="card-category-sm">
+    <div class="img-sm">
+      <%= image_tag("therapy.svg") %>
+    </div>
+    <div class="content">
+      <h4>Fully Equipped Clinic</h4>
+      <p>Our clinic is fully equipped with the best equipment</p>
+    </div>
+  </div>
+
+  <div class="card-category-sm">
+    <div class="img-sm">
+      <%= image_tag("therapy2.svg") %>
+    </div>
+    <div class="content">
+      <h4>Fully Equipped Clinic</h4>
+      <p>Our clinic is fully equipped with the best equipment</p>
+    </div>
+  </div>
+
+  <div class="card-category-sm">
+    <div class="img-sm">
+      <%= image_tag("child.svg") %>
+    </div>
+    <div class="content">
+      <h4>Fully Equipped Clinic</h4>
+      <p>Our clinic is fully equipped with the best equipment</p>
+    </div>
+  </div>
+
+  <div class="card-category-sm">
+    <div class="img-sm">
+      <%= image_tag("wheelchair.svg") %>
+    </div>
+    <div class="content">
+      <h4>Fully Equipped Clinic</h4>
+      <p>Our clinic is fully equipped with the best equipment</p>
+    </div>
+  </div>
+
+  <div class="card-category-sm">
+    <div class="img-sm">
+      <%= image_tag("child.svg") %>
+    </div>
+    <div class="content">
+      <h4>Fully Equipped Clinic</h4>
+      <p>Our clinic is fully equipped with the best equipment</p>
+    </div>
+  </div>
+
+  <div class="card-category-sm">
+    <div class="img-sm">
+      <%= image_tag("therapy2.svg") %>
+    </div>
+    <div class="content">
+      <h4>Fully Equipped Clinic</h4>
+      <p>Our clinic is fully equipped with the best equipment</p>
+    </div>
+  </div>
+</div>
+
+
