--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -1,3 +1,4 @@
+
 .card-container{
   display: flex;
   flex-flow: row;
@@ -18,6 +19,7 @@
   width: 360px;
   height: 476px;
 }
+
 
 .card-category .text{
   border: 3px solid rgba(0,0,0,0.3);
@@ -89,3 +91,71 @@
   color: gray;
 
 }
+
+
+.card-container-blu{
+  display: flex;
+  flex-flow: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: baseline;
+  align-content: center;
+  background-color: #b4d4ec;
+  height: 95vh;
+}
+
+.card-container-blu .card-category-sm{
+  margin: 12px 12px;
+  align-self: start;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-around;
+  align-items: baseline;
+  align-content: center;
+  width: 360px;
+  height: 260px;
+  background-color: white;
+}
+
+.card-category-sm .img-sm {
+  align-self: center;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  align-content: start;
+  height: 49px;
+  width: 265px;
+
+  img{
+      margin-top: 20px;
+    width: 55px;
+    height: 55px;
+  }
+}
+
+.card-category-sm .content{
+  align-self: center;
+  display: flex;
+  flex-flow: column;
+  justify-content: start;
+  align-items: start;
+  align-content: start;
+  width: 265px;
+  padding-bottom: 25px;
+
+  h4{
+    font-size: 20px;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 26px;
+    color: #333333;
+  }
+
+  p{
+    color: #969ea9;
+    font-size: 14px;
+    line-height: 26px;
+
+  }
+}
+
