--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -10,7 +10,7 @@
   align-items: center;
   align-content: center;
   text-align: center;
-  background: #cdecef;
+  background: white;
 }
 
 .nav-container .nav-logo{
@@ -106,6 +106,8 @@
   grid-area: btn;
   align-self: center;
 }
+
+
 
 // @media (max-width: 640px){
 
