--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -49,6 +49,9 @@
   <p>
     Why Veronica?
   </p>
+  <div class="line">
+
+  </div>
 </div>
 
 <div class="card-container-blu">
@@ -114,3 +117,94 @@
 </div>
 
 
+<div class="container-header-white">
+  <div>
+    <p>
+    Customer Testimonials
+  </p>
+  </div>
+  <div class="line">
+
+  </div>
+</div>
+
+<div class="card-container-testimonial">
+  <div class="card-category-testimonial">
+    <div class="testimonial-icon">
+      <%= image_tag("profile.svg") %>
+    </div>
+    <div class="testimonial-inner">
+      <p>
+        I contacted Veronica due to my long term back pain. Veronica was excellent! After 3 months I am finally walking again without pain. Next step is to take on tough mudder. Thanks Veronica!
+      </p>
+    </div>
+    <div class="testimonial-meta">
+      <div class="testimonial-author">
+        <p>
+          John Jones
+        </p>
+      </div>
+      <div class="testimonial-location">
+        <p>
+          Hertfordshire
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="card-category-testimonial">
+    <div class="testimonial-icon">
+      <%= image_tag("profile.svg") %>
+    </div>
+    <div class="testimonial-inner">
+      <p>
+        I contacted Veronica due to my long term back pain. Veronica was excellent! After 3 months I am finally walking again without pain. Next step is to take on tough mudder. Thanks Veronica!
+      </p>
+    </div>
+    <div class="testimonial-meta">
+      <div class="testimonial-author">
+        <p>
+          John Jones
+        </p>
+      </div>
+      <div class="testimonial-location">
+        <p>
+          Hertfordshire
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="card-category-testimonial">
+    <div class="testimonial-icon">
+      <%= image_tag("profile.svg") %>
+    </div>
+    <div class="testimonial-inner">
+      <p>
+        I contacted Veronica due to my long term back pain. Veronica was excellent! After 3 months I am finally walking again without pain. Next step is to take on tough mudder. Thanks Veronica!
+      </p>
+    </div>
+    <div class="testimonial-meta">
+      <div class="testimonial-author">
+        <p>
+          John Jones
+        </p>
+      </div>
+      <div class="testimonial-location">
+        <p>
+          Hertfordshire
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="container-header">
+  <p>
+    Meet Our Therapists
+  </p>
+  <div class="line">
+
+  </div>
+</div>
