section 5 added and 4 redone

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,5 +1,12 @@
 
+
+
 <%= partial "banner" %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+
 
 <div class="simple-bar">
       <p>
@@ -9,6 +16,78 @@
       <a href="#">Book Appointment</a>
     </div>
 </div>
+
+<!-- ################################################################################ -->
+
+
+
+
+
+
+
+
+<div class="main-panel">
+  <div class="panel-cell">
+    <div class="panel-cell-inner">
+      <div class="content-holder ">
+        <div class="panel-1-box-border">
+          <h3>Sport Massage</h3>
+          <p>
+            Here at Veronica physiotherapy clinic we strive to provide you with an exceptional quality of care across all our services which range from, physiotherapy, ergonomics and more. All therapy services are carried out by experienced and fully trained experts. To see our full range of therapy services please click on the link below.
+          </p>
+          <a href="">All Services</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="panel-cell">
+    <div class="panel-cell-inner">
+      <div class="content-holder">
+        <a href="">
+          <%= image_tag("2.png") %>
+        </a>
+        <div class="text">
+          <h3>Sport Massage</h3>
+          <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+          <a href="">Read More</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="panel-cell">
+    <div class="panel-cell-inner">
+      <div class="content-holder">
+        <a href="">
+          <%= image_tag("2.png") %>
+        </a>
+        <div class="text">
+          <h3>Sport Massage</h3>
+          <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+          <a href="">Read More</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- ################################################################################ -->
 <div class="card-container">
 
   <div class="card-category">
@@ -206,5 +285,77 @@
   </p>
   <div class="line">
 
+  </div>
+</div>
+
+
+
+
+
+<div class="main-panel">
+  <div class="panel-cell">
+    <div class="panel-cell-inner">
+      <div class="content-holder">
+        <a href="">
+          <%= image_tag("sample1.png") %>
+        </a>
+        <div class="text">
+          <h3>Jessica Star</h3>
+          <h4>Senior Therapist</h4>
+          <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+          <div class="icons">
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-linkedin"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="panel-cell">
+    <div class="panel-cell-inner">
+      <div class="content-holder">
+        <a href="">
+          <%= image_tag("sample2.png") %>
+        </a>
+        <div class="text">
+          <h3>Jessica Star</h3>
+          <h4>Senior Therapist</h4>
+          <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+          <div class="icons">
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-instagram-square"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="panel-cell">
+    <div class="panel-cell-inner">
+      <div class="content-holder">
+        <a href="">
+          <%= image_tag("sample3.png") %>
+        </a>
+        <div class="text">
+          <h3>Jessica Star</h3>
+          <h4>Senior Therapist</h4>
+          <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+          <div class="icons">
+            <i class="fab fa-twitter-square"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-instagram-square"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+    </div>
   </div>
 </div>
