--- a/source/stylesheets/components/_container.scss
+++ b/source/stylesheets/components/_container.scss
@@ -6,6 +6,10 @@
   align-content: center;
   background-color: #b4d4ec;
   height: 9em;
+    margin-left: -150px;
+    margin-right: -150px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 .container-header p {
