--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -79,6 +79,10 @@
 
   justify-content:  start;
   background-color: #b4d4ec;
+      margin-left: -165px;
+    margin-right: -165px;
+    padding-left: 50px;
+    padding-right: 155px;
 
 
   p {
@@ -88,6 +92,8 @@
     font-size: 20px;
     font-family: sans-serif;
     margin-top: 5px;
+    display:bolck;
+    width:700px;
   }
 
   a {
