--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -1,4 +1,134 @@
 
+.main-panel{
+  width: 1140px;
+  height: 632px;
+  display: flex;
+  justify-content: space-around;
+  padding: 96px 0 48px;
+}
+
+.main-panel .panel-cell{
+  width: 360px;
+  height: 487px;
+  // margin: 12px;
+}
+
+.panel-cell-inner{
+  width: 360px;
+  height: 475px;
+}
+
+.content-holder{
+  width: 360px;
+  height: 466px;
+  display: block;
+
+  img{
+    width: 360px;
+    height: 215px;
+    max-width: 100%;
+    min-width: 100%;
+    height: auto;
+    display: block;
+  }
+}
+
+.text{
+  width: 360px;
+  height: 248px;
+  display: block;
+  text-align: left;
+  padding: 36px;
+
+  h3 {
+    margin: 0 0 12px;
+    display:block;
+    font-size: 18px;
+    font-weight: 700;
+    color: #333333;
+  }
+
+  h4{
+    margin: 0 0 12px;
+    display:block;
+    font-size: 12px;
+    color:  #6ed3cf;
+    font-weight: bold;
+  }
+
+  p {
+    margin: 0 0 12px;
+    display:block;
+    font-size: 14px;
+    color: gray;
+  }
+
+  a {
+    margin: 0 0 12px;
+    display:block;
+    font-size: 14px;
+    color: #8cbce4;
+  }
+
+    .fab {
+    color: #9068be;
+    font-size: 28px;
+  }
+}
+
+.icons{
+  display: block;
+}
+
+.panel-1-box-border{
+  padding: 36px;
+  border: 4px solid #eee;
+  display: block;
+  width: 360px;
+  height: 400px;
+  margin-bottom: 18px ;
+
+  text-align: left;
+
+
+  h3 {
+    margin-bottom: 18px;
+    display:block;
+    font-size: 28px;
+    font-weight: 700;
+    color: #263c53;
+  }
+
+  p {
+    margin-bottom: 18px;
+    font-size: 14px;
+    line-height: 26px;
+    display: block;
+    color: #88919e;
+  }
+
+  a {
+
+    display:block;
+    color: #9068be;
+        font-weight: 700;
+    font-size: 14px;
+
+  }
+}
+
+
+.card-borer{
+  border: 2px solid gray;
+}
+
+
+
+
+
+
+
+// #######################################################################################################
 .card-container{
   display: flex;
   flex-flow: row;
