section 5 added and 4 redone

--- a/source/_banner.html.erb
+++ b/source/_banner.html.erb
@@ -1,9 +1,9 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
-  <div class="container">
+  <div class="container-banner">
     <h1>Severe Back Pain?</h1>
-    <div class="text">
+
       <p> Book an appointment with one of our expert physiotherapists today and begin the journey to a pain free life</p>
-    </div>
+
     <div class="btn-main-lrg">
       <a href="#">Book Appointment</a>
     </div>
