--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,9 +3,7 @@
 
 <%= partial "banner" %>
 
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
+
 
 
 <div class="simple-bar">
@@ -17,6 +15,10 @@
     </div>
 </div>
 
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+
 <!-- ################################################################################ -->
 
 
@@ -25,47 +27,48 @@
 
 
 
-
-<div class="main-panel">
-  <div class="panel-cell">
-    <div class="panel-cell-inner">
-      <div class="content-holder ">
-        <div class="panel-1-box-border">
-          <h3>Sport Massage</h3>
-          <p>
-            Here at Veronica physiotherapy clinic we strive to provide you with an exceptional quality of care across all our services which range from, physiotherapy, ergonomics and more. All therapy services are carried out by experienced and fully trained experts. To see our full range of therapy services please click on the link below.
-          </p>
-          <a href="">All Services</a>
+<div class="panel-container">
+  <div class="main-panel">
+    <div class="panel-cell">
+      <div class="panel-cell-inner">
+        <div class="content-holder ">
+          <div class="panel-1-box-border">
+            <h3>Sport Massage</h3>
+            <p>
+              Here at Veronica physiotherapy clinic we strive to provide you with an exceptional quality of care across all our services which range from, physiotherapy, ergonomics and more. All therapy services are carried out by experienced and fully trained experts. To see our full range of therapy services please click on the link below.
+            </p>
+            <a href="">All Services</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="panel-cell">
-    <div class="panel-cell-inner">
-      <div class="content-holder">
-        <a href="">
-          <%= image_tag("2.png") %>
-        </a>
-        <div class="text">
-          <h3>Sport Massage</h3>
-          <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-          <a href="">Read More</a>
+    <div class="panel-cell">
+      <div class="panel-cell-inner">
+        <div class="content-holder">
+          <a href="">
+            <%= image_tag("1.png") %>
+          </a>
+          <div class="text">
+            <h3>Sport Massage</h3>
+            <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+            <a href="">Read More</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="panel-cell">
-    <div class="panel-cell-inner">
-      <div class="content-holder">
-        <a href="">
-          <%= image_tag("2.png") %>
-        </a>
-        <div class="text">
-          <h3>Sport Massage</h3>
-          <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-          <a href="">Read More</a>
+    <div class="panel-cell">
+      <div class="panel-cell-inner">
+        <div class="content-holder">
+          <a href="">
+            <%= image_tag("2.png") %>
+          </a>
+          <div class="text">
+            <h3>Sport Massage</h3>
+            <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+            <a href="">Read More</a>
+          </div>
         </div>
       </div>
     </div>
@@ -76,11 +79,11 @@
 
 
 
+</div>
+</div>
 
 
-
-
-
+</div>
 
 
 
@@ -88,48 +91,126 @@
 
 
 <!-- ################################################################################ -->
-<div class="card-container">
 
-  <div class="card-category">
-    <div class="text">
-      <h3><a href="">Sports Massage</a></h3>
-
-      <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....
-          Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....
-      </p>
-
-      <div class="card-link">
-        <a href="">Read more</a>
-      </div>
-     </div>
-         <div class="spc"></div>
-  </div>
-
-
-  <div class="card-category">
-    <%= image_tag("1.png", class: "card-img") %>
-    <h4><a href="">Sports Massage</a></h4>
-    <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-    <div class="card-link">
-      <a href="">Read more</a>
-    </div>
-  </div>
-  <div class="card-category">
-    <%= image_tag("2.png", class: "card-img") %>
-    <h4><a href="">Sports Massage</a></h4>
-    <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-    <div class="card-link">
-      <a href="">Read more</a>
-    </div>
-  </div>
-</div>
-
-<div class="container-header">
+<!-- <div class="container-header">
   <p>
     Why Veronica?
   </p>
   <div class="line">
 
+  </div>
+</div> -->
+
+
+
+<!--
+
+
+<div class="panel-container-sec2">
+  <div class="main-panel-sec2">
+    <div class="panel-cell-sec2">
+      <div class="panel-cell-inner-sec2">
+        <div class="content-holder-sec2">
+          <div class="content-holder-sec2-inner1">
+            <i class="fas fa-user-check"></i>
+          </div>
+          <div class="content-holder-sec2-inner2">
+            <h4>Experienced Therapists</h4>
+            <p>Our therapists boast of 100 years of combined experience</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="panel-cell-inner-sec2">
+        <div class="content-holder-sec2">
+          <div class="content-holder-sec2-inner1">
+            <i class="fas fa-heartbeat"></i>
+          </div>
+          <div class="content-holder-sec2-inner2">
+            <h4>Experienced Therapists</h4>
+            <p>Our therapists boast of 100 years of combined experience</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel-cell-sec2">
+      <div class="panel-cell-inner-sec2">
+        <div class="content-holder-sec2">
+          <div class="content-holder-sec2-inner1">
+            <i class="fas fa-user-check"></i>
+          </div>
+          <div class="content-holder-sec2-inner2">
+            <h4>Experienced Therapists</h4>
+            <p>Our therapists boast of 100 years of combined experience</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="panel-cell-inner-sec2">
+        <div class="content-holder-sec2">
+          <div class="content-holder-sec2-inner1">
+            <i class="fas fa-heartbeat"></i>
+          </div>
+          <div class="content-holder-sec2-inner2">
+            <h4>Experienced Therapists</h4>
+            <p>Our therapists boast of 100 years of combined experience</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel-cell-sec2">
+      <div class="panel-cell-inner-sec2">
+        <div class="content-holder-sec2">
+          <div class="content-holder-sec2-inner1">
+            <i class="fas fa-user-check"></i>
+          </div>
+          <div class="content-holder-sec2-inner2">
+            <h4>Experienced Therapists</h4>
+            <p>Our therapists boast of 100 years of combined experience</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="panel-cell-inner-sec2">
+        <div class="content-holder-sec2">
+          <div class="content-holder-sec2-inner1">
+            <i class="fas fa-heartbeat"></i>
+          </div>
+          <div class="content-holder-sec2-inner2">
+            <h4>Experienced Therapists</h4>
+            <p>Our therapists boast of 100 years of combined experience</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+ -->
+
+
+
+
+
+
+
+<!--
+<div class="row">
+    <div class="col-md-12">
+ -->
+<!-- ################################################################# -->
+
+<div class="container-header-white-blu">
+  <div>
+    <p>
+    Why Veroniva
+  </p>
+  </div>
+  <div class="line">
   </div>
 </div>
 
@@ -196,6 +277,8 @@
 </div>
 
 
+
+
 <div class="container-header-white">
   <div>
     <p>
@@ -203,7 +286,6 @@
   </p>
   </div>
   <div class="line">
-
   </div>
 </div>
 
@@ -278,22 +360,32 @@
   </div>
 </div>
 
-
+<!--
 <div class="container-header">
   <p>
     Meet Our Therapists
   </p>
-  <div class="line">
+  <div class="line"> -->
 
+<!--   </div>
+</div> -->
+
+<div class="container-header-white-blu">
+  <div>
+    <p>
+    Customers Testimonials
+  </p>
+  </div>
+  <div class="line">
   </div>
 </div>
 
-
-
-
-
-<div class="main-panel">
-  <div class="panel-cell">
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+<div class="panel-container">
+  <div class="main-panel">
+  <div class="panel-cell shadow">
     <div class="panel-cell-inner">
       <div class="content-holder">
         <a href="">
@@ -313,7 +405,7 @@
     </div>
   </div>
 
-  <div class="panel-cell">
+  <div class="panel-cell shadow">
     <div class="panel-cell-inner">
       <div class="content-holder">
         <a href="">
@@ -333,7 +425,7 @@
     </div>
   </div>
 
-  <div class="panel-cell">
+  <div class="panel-cell  shadow">
     <div class="panel-cell-inner">
       <div class="content-holder">
         <a href="">
@@ -353,9 +445,10 @@
     </div>
   </div>
 </div>
-
+</div>
 
 
     </div>
   </div>
 </div>
+
