--- a/source/stylesheets/components/_card.scss
+++ b/source/stylesheets/components/_card.scss
@@ -1,11 +1,15 @@
-
-.main-panel{
+.panel-container{
   width: 1140px;
   height: 632px;
+}
+.main-panel{
+  width: 1140px;
+  height: 487px;
   display: flex;
   justify-content: space-around;
   padding: 96px 0 48px;
 }
+
 
 .main-panel .panel-cell{
   width: 360px;
@@ -117,110 +121,104 @@
   }
 }
 
-
-.card-borer{
-  border: 2px solid gray;
+.shadow{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
-
-
-
-
 
 
 // #######################################################################################################
-.card-container{
-  display: flex;
-  flex-flow: row;
-  justify-content: center;
-  align-items: baseline;
-  align-content: center;
-  height: 90vh;
-}
+// .card-container{
+//   display: flex;
+//   flex-flow: row;
+//   justify-content: center;
+//   align-items: baseline;
+//   align-content: center;
+//   height: 90vh;
+// }
 
-.card-container .card-category{
-  margin: 80px 12px;
-  align-self: start;
-  display: flex;
-  flex-flow: column;
-  justify-content: space-around;
-  align-items: baseline;
-  align-content: center;
-  width: 360px;
-  height: 476px;
-}
+// .card-container .card-category{
+//   margin: 80px 12px;
+//   align-self: start;
+//   display: flex;
+//   flex-flow: column;
+//   justify-content: space-around;
+//   align-items: baseline;
+//   align-content: center;
+//   width: 360px;
+//   height: 476px;
+// }
 
 
-.card-category .text{
-  border: 3px solid rgba(0,0,0,0.3);
-  padding-top: 30px;
-  padding-bottom: 30px;
-  padding-right: 0px;
-  align-self: start;
-  width: 360px;
-  height: 400px;
-  display: flex;
-  justify-content: space-around;
-    flex-flow: column;
+// .card-category .text{
+//   border: 3px solid rgba(0,0,0,0.3);
+//   padding-top: 30px;
+//   padding-bottom: 30px;
+//   padding-right: 0px;
+//   align-self: start;
+//   width: 360px;
+//   height: 400px;
+//   display: flex;
+//   justify-content: space-around;
+//     flex-flow: column;
 
-    h3 {
-      font-size: 24px;
-      font-weight: bold;
-      margin: 0 30px;
-    }
+//     h3 {
+//       font-size: 24px;
+//       font-weight: bold;
+//       margin: 0 30px;
+//     }
 
-    a {
-    text-decoration: none;
-    color: black;
-    opacity: .7;
-  }
+//     a {
+//     text-decoration: none;
+//     color: black;
+//     opacity: .7;
+//   }
 
-  a:hover{
-    text-decoration: none;
-    opacity: 1;
-  }
-}
+//   a:hover{
+//     text-decoration: none;
+//     opacity: 1;
+//   }
+// }
 
-.card-category .card-img{
-  height: auto;
-  max-width: 100%;
-      font-weight: 700;
-    font-size: 20px;
-    line-height: 24px;
+// .card-category .card-img{
+//   height: auto;
+//   max-width: 100%;
+//       font-weight: 700;
+//     font-size: 20px;
+//     line-height: 24px;
 
-}
+// }
 
-.card-category h4 {
-  font-size: 20px;
-  font-weight: bold;
-  margin: 0 30px;
+// .card-category h4 {
+//   font-size: 20px;
+//   font-weight: bold;
+//   margin: 0 30px;
 
-  a {
-    text-decoration: none;
-    color: black;
-    opacity: .7;
-  }
+//   a {
+//     text-decoration: none;
+//     color: black;
+//     opacity: .7;
+//   }
 
-  a:hover{
-    text-decoration: none;
-    opacity: 1;
-  }
+//   a:hover{
+//     text-decoration: none;
+//     opacity: 1;
+//   }
 
-}
+// }
 
-.card-category p {
-  font-size: 14px;
-   margin: 0 30px;
-  color: gray;
+// .card-category p {
+//   font-size: 14px;
+//    margin: 0 30px;
+//   color: gray;
 
-}
+// }
 
-.card-category .card-link {
-  font-size: 14px;
-   margin: 0 30px;
-  color: gray;
+// .card-category .card-link {
+//   font-size: 14px;
+//    margin: 0 30px;
+//   color: gray;
 
-}
+// }
 
 
 .card-container-blu{
@@ -232,6 +230,9 @@
   align-content: center;
   background-color: #b4d4ec;
   height: 95vh;
+  width: 100%;
+  position: relative;
+  margin: 0;
 }
 
 .card-container-blu .card-category-sm{
@@ -245,6 +246,7 @@
   width: 360px;
   height: 260px;
   background-color: white;
+  position: relative;
 }
 
 .card-category-sm .img-sm {
