index page all done

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -21,12 +21,6 @@
 
 <!-- ################################################################################ -->
 
-
-
-
-
-
-
 <div class="panel-container">
   <div class="main-panel">
     <div class="panel-cell">
@@ -76,133 +70,11 @@
 </div>
 
 
-
-
-
 </div>
-</div>
-
-
-</div>
-
-
-
-
-
-
-<!-- ################################################################################ -->
-
-<!-- <div class="container-header">
-  <p>
-    Why Veronica?
-  </p>
-  <div class="line">
-
   </div>
-</div> -->
-
-
-
-<!--
-
-
-<div class="panel-container-sec2">
-  <div class="main-panel-sec2">
-    <div class="panel-cell-sec2">
-      <div class="panel-cell-inner-sec2">
-        <div class="content-holder-sec2">
-          <div class="content-holder-sec2-inner1">
-            <i class="fas fa-user-check"></i>
-          </div>
-          <div class="content-holder-sec2-inner2">
-            <h4>Experienced Therapists</h4>
-            <p>Our therapists boast of 100 years of combined experience</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="panel-cell-inner-sec2">
-        <div class="content-holder-sec2">
-          <div class="content-holder-sec2-inner1">
-            <i class="fas fa-heartbeat"></i>
-          </div>
-          <div class="content-holder-sec2-inner2">
-            <h4>Experienced Therapists</h4>
-            <p>Our therapists boast of 100 years of combined experience</p>
-          </div>
-        </div>
-      </div>
     </div>
 
-    <div class="panel-cell-sec2">
-      <div class="panel-cell-inner-sec2">
-        <div class="content-holder-sec2">
-          <div class="content-holder-sec2-inner1">
-            <i class="fas fa-user-check"></i>
-          </div>
-          <div class="content-holder-sec2-inner2">
-            <h4>Experienced Therapists</h4>
-            <p>Our therapists boast of 100 years of combined experience</p>
-          </div>
-        </div>
-      </div>
 
-      <div class="panel-cell-inner-sec2">
-        <div class="content-holder-sec2">
-          <div class="content-holder-sec2-inner1">
-            <i class="fas fa-heartbeat"></i>
-          </div>
-          <div class="content-holder-sec2-inner2">
-            <h4>Experienced Therapists</h4>
-            <p>Our therapists boast of 100 years of combined experience</p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="panel-cell-sec2">
-      <div class="panel-cell-inner-sec2">
-        <div class="content-holder-sec2">
-          <div class="content-holder-sec2-inner1">
-            <i class="fas fa-user-check"></i>
-          </div>
-          <div class="content-holder-sec2-inner2">
-            <h4>Experienced Therapists</h4>
-            <p>Our therapists boast of 100 years of combined experience</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="panel-cell-inner-sec2">
-        <div class="content-holder-sec2">
-          <div class="content-holder-sec2-inner1">
-            <i class="fas fa-heartbeat"></i>
-          </div>
-          <div class="content-holder-sec2-inner2">
-            <h4>Experienced Therapists</h4>
-            <p>Our therapists boast of 100 years of combined experience</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-
- -->
-
-
-
-
-
-
-
-<!--
-<div class="row">
-    <div class="col-md-12">
- -->
-<!-- ################################################################# -->
 
 <div class="container-header-white-blu">
   <div>
@@ -360,15 +232,6 @@
   </div>
 </div>
 
-<!--
-<div class="container-header">
-  <p>
-    Meet Our Therapists
-  </p>
-  <div class="line"> -->
-
-<!--   </div>
-</div> -->
 
 <div class="container-header-white-blu">
   <div>
@@ -383,72 +246,76 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-<div class="panel-container">
-  <div class="main-panel">
-  <div class="panel-cell shadow">
-    <div class="panel-cell-inner">
-      <div class="content-holder">
-        <a href="">
-          <%= image_tag("sample1.png") %>
-        </a>
-        <div class="text">
-          <h3>Jessica Star</h3>
-          <h4>Senior Therapist</h4>
-          <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-          <div class="icons">
-            <i class="fab fa-twitter-square"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-linkedin"></i>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="panel-cell shadow">
-    <div class="panel-cell-inner">
-      <div class="content-holder">
-        <a href="">
-          <%= image_tag("sample2.png") %>
-        </a>
-        <div class="text">
-          <h3>Jessica Star</h3>
-          <h4>Senior Therapist</h4>
-          <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-          <div class="icons">
-            <i class="fab fa-twitter-square"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-instagram-square"></i>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div class="panel-cell  shadow">
-    <div class="panel-cell-inner">
-      <div class="content-holder">
-        <a href="">
-          <%= image_tag("sample3.png") %>
-        </a>
-        <div class="text">
-          <h3>Jessica Star</h3>
-          <h4>Senior Therapist</h4>
-          <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
-          <div class="icons">
-            <i class="fab fa-twitter-square"></i>
-            <i class="fab fa-linkedin"></i>
-            <i class="fab fa-instagram-square"></i>
+          <div class="panel-container">
+            <div class="main-panel">
+            <div class="panel-cell shadow">
+              <div class="panel-cell-inner">
+                <div class="content-holder">
+                  <a href="">
+                    <%= image_tag("sample1.png") %>
+                  </a>
+                  <div class="text">
+                    <h3>Jessica Star</h3>
+                    <h4>Senior Therapist</h4>
+                    <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+                    <div class="icons">
+                      <i class="fab fa-twitter-square"></i>
+                      <i class="fab fa-linkedin"></i>
+                      <i class="fab fa-linkedin"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="panel-cell shadow">
+              <div class="panel-cell-inner">
+                <div class="content-holder">
+                  <a href="">
+                    <%= image_tag("sample2.png") %>
+                  </a>
+                  <div class="text">
+                    <h3>Jessica Star</h3>
+                    <h4>Senior Therapist</h4>
+                    <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+                    <div class="icons">
+                      <i class="fab fa-twitter-square"></i>
+                      <i class="fab fa-linkedin"></i>
+                      <i class="fab fa-instagram-square"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="panel-cell  shadow">
+              <div class="panel-cell-inner">
+                <div class="content-holder">
+                  <a href="">
+                    <%= image_tag("sample3.png") %>
+                  </a>
+                  <div class="text">
+                    <h3>Jessica Star</h3>
+                    <h4>Senior Therapist</h4>
+                    <p>Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum....</p>
+                    <div class="icons">
+                      <i class="fab fa-twitter-square"></i>
+                      <i class="fab fa-linkedin"></i>
+                      <i class="fab fa-instagram-square"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-      </div>
+          </div>
+
+
     </div>
   </div>
 </div>
-</div>
 
-
-    </div>
-  </div>
-</div>
+<%= partial "footer" %>
 
