--- a/source/stylesheets/components/_index.scss
+++ b/source/stylesheets/components/_index.scss
@@ -7,8 +7,16 @@
 @import "banner";
 @import "card";
 @import "container";
+@import "footer";
 
 
+h3 {
+  color: #a7b0bd;
+    font-size: 16px;
+    font-size: 1rem;
+    line-height: 1.5;
+    font-weight: 600;
+}
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Signika',sans-serif;
 }
